<resources>
    <string name="app_name">NNDAK</string>
    <string name="title_nndak">NNDAK</string>
    <string name="title_patient_list">Registered Patients</string>
    <string name="title_patient_detail">SamplePatient Detail</string>
    <string name="menu_about">About Fhir Engine</string>
    <string name="menu_sync_resources">Sync Resources</string>
    <string name="menu_patient_edit">@string/edit_patient</string>
    <string name="observation_brief_text">%1$s: %2$s\nEffective: %3$s</string>
    <string name="query_hint_patient_search">Find by Patient Name</string>
    <string name="cancel_questionnaire_message">Are you sure you want to discard?</string>
    <string name="patient_id">Id</string>
    <string name="patient_name">Name</string>
    <string name="patient_gender">Gender</string>
    <string name="patient_dob">DOB</string>
    <string name="patient_phone_number">Phone Number</string>
    <string name="patient_city">City</string>
    <string name="patient_country">Country</string>
    <string name="patient_is_active">Is Active</string>
    <string name="patient_property_mobile">Mobile Number</string>
    <string name="patient_property_id">ID Number</string>
    <string name="patient_property_address">Address</string>
    <string name="patient_property_dob">Date of Birth</string>
    <string name="patient_property_gender">Gender</string>
    <string name="add_patient">Add Patient</string>
    <string name="edit_patient">Edit Patient</string>
    <string name="submit">Submit</string>
    <string name="message_syncing">Syncing\u2026</string>
    <string name="message_input_missing">Please check input data.</string>
    <string name="message_patient_updated">Patient is updated.</string>
    <string name="inputs_missing">Please fill in all required fields.</string>
    <string name="resources_saved">Record added successfully.</string>
    <string name="response_received">questionnaire response is received.</string>
    <string name="html_text">Current status: <font color="#ddd">UNKNOWN</font></string>
    <string name="header_observation">Observations</string>
    <string name="header_conditions">Conditions</string>
    <string name="message_no_datetime">No effective DateTime</string>
    <string name="complete_survey">Complete Survey</string>
    <string name="risk_status">Current status: </string>
    <string name="unknown">UNKNOWN</string>
    <string name="none">none</string>
    <string name="description_status">Status</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sync_menu">Sync</string>
    <string name="last_sync">Last sync</string>
    <string name="action_submit">Save</string>
    <string name="action_gender">Gender</string>
    <string name="action_lastname">Last Name</string>
    <string name="action_dob">Date of Birth</string>
    <string name="action_firstname">First Name</string>
    <string name="action_other">Family Name</string>
    <string name="action_phone">Phone Number</string>
    <string name="action_city">City</string>
    <string name="action_country">Country</string>
    <string name="action_active">Is Active?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_male">Male</string>
    <string name="action_female">Female</string>
    <string name="action_client">Patient Info</string>
    <string name="maternity_menu">Maternity Registration</string>
    <string name="mother_child_menu">Mother and Child Assessment</string>
    <string name="post_natal_menu">Post Natal Unit</string>
    <string name="new_born_menu">"New Born Unit "</string>
    <string name="feeding_assessment_menu">Feeding Needs Assessment</string>
    <string name="hmb_menu">HMB Ordering and Dispensing</string>
    <string name="monitoring_menu">NB Monitoring and Assessment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_maternity">Record Maternity</string>
    <string name="dashboard_maternity_icon_label">Maternity </string>
    <string name="dashboard_newborn_icon_label"> Discharge</string>
    <string name="action_patient_list">Registered Patients</string>
    <string name="dashboard_hmb_icon_label">Human Milk Bank</string>
    <string name="home_menu">Home</string>
    <string name="heading_one">Assessment</string>
    <string name="heading_two">New Born Registration</string>
    <string name="heading_three">Post Natal</string>
    <string name="heading_fourth">Monitoring and Assessment</string>
    <string name="desc_one">Maternity Unit, Assess the mother and baby | Record maternity details</string>
    <string name="desc_two">Register a new born! Capture units for weight and temperature </string>
    <string name="desc_three">Re-assess the baby, check if need for Lactation Support as ease.</string>
    <string name="desc_fourth">Monitor Mother\'s and Baby\'s progress, Discharge once they are both ready</string>
    <string name="action_username">Email *</string>
    <string name="action_password">Password</string>
    <string name="unable_to_login">Forgot your Password? <font color="#32CD32">Click here to reset</font></string>
    <string name="login_offline">Offline</string>
    <string name="action_provider_management">Monitoring and Assessment</string>
    <string name="action_new_born">New Born</string>
    <string name="action_post_natallabel">Post Natal</string>
    <string name="skip">Skip</string>
    <string name="exit_menu">Logout</string>
    <string name="welcome_text_Wizard">Welcome Back</string>
    <string name="signin_now">Sign In</string>
    <string name="log_in">SignIn</string>
    <string name="app_forgot">Recover</string>
    <string name="action_email_address">Email Address</string>
    <string name="app_submit">Submit</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_valid_email_address">Enter Valid Email Address</string>
    <string name="hint_0">0</string>
    <string name="app_slogan">Life saving milk</string>
    <string name="view"><u>View</u></string>
    <string name="action_enter_pin">Enter New Pin</string>
    <string name="action_confirm_password">Confirm Password</string>
    <string name="action_new_password">New Password</string>
    <string name="action_password_recovery">Account Recovery</string>
    <string name="action_matching_password">Password does not match</string>
    <string name="action_profile">My Account</string>
    <string name="action_role">Role</string>
    <string name="action_member">Added</string>
    <string name="action_signup">Sign Up</string>
    <string name="menu_new_born">New Born Assessment</string>
    <string name="menu_assessment">Feeding Data</string>
    <string name="menu_prescribe">Prescribe Feeds</string>
    <string name="menu_request_consent">Request</string>
    <string name="menu_dhm_prescription">DHM Prescription</string>
    <string name="menu_order_confirmation">Order confirmation</string>
    <string name="menu_register_update">Register Update</string>
    <string name="menu_dhm_reception">Receive DHM</string>
    <string name="menu_assess">Assess</string>
    <string name="menu_maternity">Record Details</string>
    <string name="action_configure">Configuration</string>
    <string name="action_server_url">Server Url</string>
    <string name="enter_server_url">Enter Server URL</string>
    <string name="enter_valid_server_url">Enter Valid Server Url</string>
    <string name="action_server_url_demo">Demo Fhir URL</string>
    <string name="menu_relation">Relation</string>
    <string name="header_relation">Child/Children</string>
    <string name="action_cancel">Cancel</string>
    <string name="menu_apgar_score">APGAR Score</string>
    <string name="menu_new">New Born</string>
    <string name="action_score">APGAR Score</string>
    <string name="action_assess">Assessment</string>
    <string name="edit_child">Edit Child</string>
    <string name="action_additional">Complete</string>
    <string name="action_rapid">Rapid Assessment</string>
    <string name="action_new_admission">Admission</string>
    <string name="action_feeding_needs">Feeding Needs</string>
    <string name="spinner">Q39</string>
    <string name="resources_child_assessed">Assessment Details Saved</string>
    <string name="app_feeding_needs">Feeding Needs</string>
    <string name="app_feeding_prescribe">Prescribe Feeds</string>
    <string name="app_feeding_data">Feeding Data</string>
    <string name="app_health">Health Monitoring</string>
    <string name="action_assess_child">Child Assessment</string>
    <string name="app_lactation">Lactation Assessment</string>
    <string name="app_milk_expression">Milk Expression</string>
    <string name="action_feeding_effectiveness">Feeding Effectiveness</string>
    <string name="action_supplements">Supplements</string>
    <string name="action_update_details">Update Details</string>
    <string name="action_dhm_receival">DHM Receival</string>
    <string name="starting">First Timer</string>
    <string name="existing">Existing</string>
    <string name="action_assessment">Assess Child</string>
    <string name="action_discharge">Discharge Baby</string>
    <string name="header_encounters">Medical Visits</string>
    <string name="app_partial">Partial</string>
    <string name="app_complete">Complete</string>
    <string name="app_selection">Please select an option</string>
    <string name="home_babies">Baby\'s Profiles</string>
    <string name="home_client">Patient Registration</string>
    <string name="home_menu_dashboard">Human Milk Bank Dashboard</string>
    <string name="app_total_term">Total Term and Preterm DHM Available</string>
    <string name="action_dummy">20</string>
    <string name="action_numbers">No of Infants on DHM</string>
    <string name="total_babies">Total Number of Babies</string>
    <string name="action_percent">5%</string>
    <string name="query_ip_search">IP Number</string>
    <string name="app_hint">Sort By</string>
    <string name="action_enter_stock">Enter DHM Stock</string>
    <string name="action_view_dhm">View DHM Orders</string>
    <string name="action_register_baby">Register a Baby</string>
    <string name="app_name_original">NNDAK</string>
    <string name="app_pumwani">Pumwani Maternity Hospital</string>
    <string name="app_faqs">FAQs</string>
    <string name="app_baby_name">Baby\'s Name</string>
    <string name="app_mother_name">Mother\'s Name</string>
    <string name="app_ip_number">IP Number</string>
    <string name="app_birth_weight">Birth Weight</string>
    <string name="app_status">Status</string>
    <string name="app_rate_gain">Rate of Weight Gain</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_guide">Guide</string>
    <string name="app_current_prescription">Current Prescription</string>
    <string name="app_route">Route</string>
    <string name="app_consent">Consent</string>
    <string name="app_baby_age">Baby\'s Age (Days)</string>
    <string name="app_dhm_type">Type of DHM</string>
    <string name="app_action">Action</string>
    <string name="app_today_total">Total Today\'s Feeds Volume</string>
    <string name="app_three_hourly">3 Hourly Feed Volume</string>
    <string name="app_three_hourly_break">3 Hourly Feed Breakdown</string>
    <string name="enter_feeds">Enter the amount of feeds taken</string>
    <string name="tv_feed">Feeding</string>
    <string name="_0">0</string>
    <string name="menu_dhm_mls">DHM (mls)</string>
    <string name="app_iv_fluids_mls">IV Fluids (mls)</string>
    <string name="ebm_mls">EBM mls</string>
    <string name="deficit_mls">Deficit (mls)</string>
    <string name="app_upcoming">"Click the Upcoming Feeding Schedules to feed "</string>
    <string name="app_enter_feeding">Enter Amount taken</string>
    <string name="app_feeding_history">Feeding History</string>
</resources>