<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@android:style/Theme.NoTitleBar">
    <item
        android:id="@+id/menu_new_born"
        android:icon="@drawable/message"
        android:iconTint="@color/white"
        android:title="@string/app_faqs"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_assessment"
        android:icon="@drawable/bell"
        android:iconTint="@color/white"
        android:title="@string/menu_notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_prescribe"
        android:icon="@drawable/mask"
        android:title="@string/menu_guide"
        app:showAsAction="ifRoom" />
</menu>
