<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp_sync"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sync"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/sync_menu" />
    </group>
    <group
        android:id="@+id/grp_account"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/action_profile" />
        <item
            android:id="@+id/menu_exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/exit_menu" />

    </group>

</menu>
