<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.dashboard.monitor.FeedingFragment">


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/ln_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_current_prescription"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:visibility="gone" />

        <include
            android:id="@+id/inc_prescribe"
            layout="@layout/prescribe_item"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_hist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_upcoming"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:visibility="gone" />

        <include
            android:id="@+id/inc_schedule"
            layout="@layout/schedule_item" />

        <TextView
            android:id="@+id/tv_feeding"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_feeding_history"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />


        <include
            android:id="@+id/inc_history"
            layout="@layout/feeding_history_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/_100dp"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/feeding_history_item" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_collection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/app_enter_feeding"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <include
            android:id="@+id/control"
            layout="@layout/feeding" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/add_patient_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="@dimen/_15dp"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5dp"
                android:backgroundTint="@color/dim_red"
                android:text="@string/action_submit"
                app:cornerRadius="@dimen/_25dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5dp"
                android:text="@string/action_cancel"
                app:cornerRadius="@dimen/_25dp"
                app:strokeColor="@color/dim_red" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>