<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ln_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_today_total"

            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_today_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_route"

            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_route"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_three_hourly"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_three_hourly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_breakdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_three_hourly_break"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_three_hourly_break"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody2" />
    </LinearLayout>
</LinearLayout>